--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     <!-- Hero Section -->
      <div class="mt-48 ml-2">
       <h1 class="text-6xl font-semibold mb-2">Hi There!</h1>
-      <p class="text-2xl font-semibold mb-2">
+      <p class="text-2xl font-semibold">
         Im, Raditya Rizki
       </p>
-      <p>Im, Junior Web Developer and IT Implementor</p>
+      <p class="text-xl font-semibold">Im, Junior Web Developer and IT Implementor</p>
+      <h1 class="p-4 w-1/5 text-center text-xl mt-6 rounded-2xl font-semibold bg-indigo-600 text-white">Contact Me Here!</h1>
      </div>
   </body>
   <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@1.0.2/index.js"></script>
