--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <p class="text-2xl font-semibold">
         Im, Raditya Rizki
       </p>
-      <p class="text-xl font-semibold">Im, Junior Web Developer and IT Implementor</p>
-      <h1 class="p-4 w-1/5 text-center text-xl mt-6 rounded-2xl font-semibold bg-indigo-600 text-white">Contact Me Here!</h1>
+      <p class="text-xl font-semibold mb-8">Im Junior Web Developer and IT Implementor</p>
+      <a class="w-1/12 bg-indigo-600 text-2xl font-semibold text-white p-4 rounded-3xl" href="#">Contact Me Here!</a>
      </div>
   </body>
   <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@1.0.2/index.js"></script>
