--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
      <link rel="stylesheet" href="style.css">
 
   </head>
-  <body class="mr-16 ml-16">
-    <nav class="shadow-2xl flex justify-between pt-2 mt-2 pb-2 rounded-2xl bg-indigo-600 text-white font-semibold pr-6 pl-6">
+  <body class="mr-24 ml-24">
+    <nav class="shadow-2xl flex justify-between p-4 mt-2 rounded-2xl bg-indigo-600 text-white font-semibold pr-6 pl-6">
       <h1 class="text-3xl font-semibold">Dit Portofolio!</h1>
       <div class="pt-1">
         <a href="#">Home</a>
@@ -27,12 +27,20 @@
     
     <!-- Hero Section -->
      <div class="mt-48 ml-2">
-      <h1 class="text-6xl font-semibold mb-2">Hi There!</h1>
-      <p class="text-2xl font-semibold">
-        Im, Raditya Rizki
+      <h1 class="text-5xl font-semibold mb-2">Hi There!</h1>
+      <p class="text-8xl font-medium">
+        I'am <span class="text-indigo-600 font-semibold">Raditya</span>
       </p>
-      <p class="text-xl font-semibold mb-8">Im Junior Web Developer and IT Implementor</p>
-      <a class="w-1/12 bg-indigo-600 text-2xl font-semibold text-white p-4 rounded-3xl" href="#">Contact Me Here!</a>
+      <p class="text-2xl mt-4 font-normal mb-8">I Am a Student at ULBI majoring in Informatics Engineering with <span>Junior Web developer</span> and IT implementer skills</p>
+      <a class="w-1/12 bg-indigo-600 text-2xl font-medium text-white p-4 rounded-3xl" href="#">Contact Me Here!</a>
+     </div>
+
+     <!-- About Section -->
+     <div class="mt-64 w-full h-[500px] rounded-xl bg-indigo-50">
+      <div>
+        <h1 class="text-4xl pt-4 ml-4 font-medium">About Me!</h1>
+        <p>Hi! Im</p>
+      </div>
      </div>
   </body>
   <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@1.0.2/index.js"></script>
