--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           name="name"
           required
           class="w-full px-8 py-4 text-xl border-2 border-indigo-200 rounded-2xl focus:ring-4 focus:ring-indigo-400 focus:border-indigo-600 outline-none transition"
-          placeholder="John Doe">
+          placeholder="Dit Doang!">
       </div>
       
       <div>
@@ -148,7 +148,7 @@
           name="email"
           required
           class="w-full px-8 py-4 text-xl border-2 border-indigo-200 rounded-2xl focus:ring-4 focus:ring-indigo-400 focus:border-indigo-600 outline-none transition"
-          placeholder="johndoe@example.com">
+          placeholder="ditdoang@gmail.com">
       </div>
     </div>
 
