--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     
     <!-- Hero Section -->
-     <div class="my-[350px] ml-2">
+     <div class="my-[180px] ml-2">
       <h1 class="text-5xl font-semibold mb-2">Hi There!</h1>
       <p class="text-8xl font-medium">
         I'am <span class="text-indigo-600 font-semibold">Raditya</span>
@@ -48,12 +48,28 @@
 
      <!-- Project -->
       <div class="my-24">
-        <h1 class="text-4xl font-medium text-center">Project</h1>
-        <div class="flex my-24 gap-5">
-          <div class="w-1/4 h-[500px] rounded-2xl bg-indigo-600">Project 1</div>
-          <div class="w-1/4 h-[500px] rounded-2xl bg-indigo-600">Project 1</div>
-          <div class="w-1/4 h-[500px] rounded-2xl bg-indigo-600">Project 1</div>
-          <div class="w-1/4 h-[500px] rounded-2xl bg-indigo-600">Project 1</div>
+        <h1 class="text-4xl font-medium text-center ">Project</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 mt-8 gap-5">
+          <div class="h-80 rounded-2xl w-full bg-indigo-50">
+            <h1 class="h-56 w-1/2">This Image</h1>
+            <h1 class="text-2xl font font-medium">Duck vs Obtacles Java Game</h1>
+            <p>Java Greenfoor game, Released on Playstore</p>
+          </div>
+          <div class="h-80 rounded-2xl w-full bg-indigo-50">
+            <h1 class="h-56 w-1/2">This Image</h1>
+            <h1 class="text-2xl font font-medium">Duck vs Obtacles Java Game</h1>
+            <p>Java Greenfoor game, Released on Playstore</p>
+          </div>
+          <div class="h-80 rounded-2xl w-full bg-indigo-50">
+            <h1 class="h-56 w-1/2">This Image</h1>
+            <h1 class="text-2xl font font-medium">Duck vs Obtacles Java Game</h1>
+            <p>Java Greenfoor game, Released on Playstore</p>
+          </div>
+          <div class="h-80 rounded-2xl w-full bg-indigo-50">
+            <h1 class="h-56 w-1/2">This Image</h1>
+            <h1 class="text-2xl font font-medium">Duck vs Obtacles Java Game</h1>
+            <p>Java Greenfoor game, Released on Playstore</p>
+          </div>
         </div>
       </div>
 
