--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
 
   </head>
   <body class="mr-24 ml-24">
-    <nav class="shadow-2xl flex justify-between p-4 mt-2 rounded-2xl bg-indigo-600 text-white font-semibold pr-6 pl-6">
-      <h1 class="text-3xl font-semibold">Dit Portofolio!</h1>
-      <div class="pt-1">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Projects</a>
-      </div>
-    </nav>
     
     <!-- Hero Section -->
      <div class="my-[180px] ml-2">
@@ -65,8 +57,10 @@
             <h1 class="text-2xl font font-medium">Duck vs Obtacles Java Game</h1>
             <p>Java Greenfoor game, Released on Playstore</p>
           </div>
-          <div class="h-80 rounded-2xl w-full bg-indigo-50">
-            <h1 class="h-56 w-1/2">This Image</h1>
+          <div class="h-80 rounded-2xl w-full object-cover bg-indigo-50">
+            <div class="flex-1 relative">
+              <img class="" src="img/image.png" alt="">
+            </div>
             <h1 class="text-2xl font font-medium">Duck vs Obtacles Java Game</h1>
             <p>Java Greenfoor game, Released on Playstore</p>
           </div>
