--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
   </header>
 
   <!-- Hero Section -->
-   <section id="home" class="pt-36">
+   <section id="home" class="pt-56">
     <div class="container">
       <div class="flex flex-wrap">
       <div class="w-full self-center px-4">
-          <h1 class="text-base font-semibold text-indigo-500">Hai Dunia, Saya <span class="text-slate-900 block font-semibold text-4xl mt-1">Raditya Rizki</span></h1>
+          <h1 class="text-xl font-semibold text-indigo-500">Hai Dunia, Saya <span class="text-slate-900 block font-semibold text-5xl mt-1">Raditya Rizki</span></h1>
           <h2 class="font-medium text-slate-500 text-lg mb-5">Mahasiswa | It Implementor | Junior Web Programming</h2>
-          <p class="font-medium text-indigo-400 mb-10 leading-relaxed">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur impedit praesentium adipisci, quas placeat eius molestias.</p>
+          <p class="font-medium text-indigo-400 mb-10 leading-relaxed w-1/2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur impedit praesentium adipisci, quas placeat eius molestias.</p>
 
           <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">Kontak Saya Disini!</a>
     </div>
   
     <!-- About Section -->
-     <section id="about" class="pt-36 pb-32 mb-96">
+     <section id="about" class="pt-56 pb-48">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
@@ -140,6 +140,60 @@
         </div>
       </div>
      </section>
+
+     <!-- Project -->
+     <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-sky-100 rounded-xl">
+      <div class="container">
+        <div class="w-full">
+          <div class="mx-auto mb-16 max-w-xl text-center">
+            <h4 class="text-4xl font-semibold mb-2">Project Terbaru</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas minima totam dolorem expedita aut nesciunt vitae in similique delectus eveniet!</p>
+          </div>
+        </div>
+
+    <div class="w-full flex flex-wrap justify-center">
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="img/game.png" alt="" class="w-full">
+        </div>
+        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+          Duck vs Obstacles Games
+        </h3>
+        <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan GitHub <a class="font-semibold text-slate-900" href="#" target="_blank">Cek Disini!</a>
+      </div>
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="img/figma.png" alt="" class="w-full">
+        </div>
+        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+          UI/UX Aplikasi I Health
+        </h3>
+        <p class="font-medium text-base text-indigo-500">Membuat rancangan design dan protoype aplikasi I Health dari FIgma dan membuat design thinking dari ranangan UI/UX ini <a class="font-semibold text-slate-900" href="#" target="_blank">Cobain Prototype!</a></p>
+      </div>
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="img/image.png" alt="" class="w-full">
+        </div>
+        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+          E-Commerce Website
+        </h3>
+        <p class="font-medium text-base text-indigo-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti modi aliquam dolore, officia dolor natus ea minima quo. Adipisci, illo.</p>
+      </div>
+      <div class="mb-12 p-4 md:w-1/2">
+        <div class="rounded-md shadow-md overflow-hidden">
+          <img src="img/image.png" alt="" class="w-full">
+        </div>
+        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+          Greenfoot Java Games
+        </h3>
+        <p class="font-medium text-base text-indigo-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum laboriosam, voluptates molestias nobis mollitia nostrum rerum.</p>
+      </div>
+
+  
+
+      </div>
+     </section>
+
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
 
      <script src="script.js"></script>
