--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
   
     <!-- About Section -->
-     <section id="about" class="pt-56 pb-48">
+     <section id="about" class="pt-56 pb-36">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
@@ -142,7 +142,7 @@
      </section>
 
      <!-- Project -->
-     <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-sky-100 rounded-xl">
+     <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-slate-100 rounded-xl shadow-xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
@@ -188,10 +188,38 @@
         </h3>
         <p class="font-medium text-base text-indigo-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum laboriosam, voluptates molestias nobis mollitia nostrum rerum.</p>
       </div>
-
-  
-
       </div>
+     </section>
+
+     <!-- Contact -->
+     <section id="project" class="pt-36 mt-16 pb-16 w-screen">
+      <div class="container">
+        <div class="w-full">
+          <div class="mx-auto mb-16 max-w-xl text-center">
+            <h4 class="text-4xl font-semibold mb-2">Kontak Saya</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas minima totam dolorem expedita aut nesciunt vitae in similique delectus eveniet!</p>
+          </div>
+
+          <form action="#">
+            <div class="w-full lg:w-2/3 lg:mx-auto">
+              <div class="w-full px-4 mb-8">
+                <label for="name" class="text-base font-bold">Nama</label>
+                <input type="text" id="name" class="w-full bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500">
+              </div>
+            <div class="w-full px-4 mb-8">
+              <label for="email" class="text-base font-bold">Email</label>
+              <input type="email" id="email" class="w-full bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500">
+            </div>
+            <div class="w-full px-4 mb-8">
+              <label for="message" class="text-base font-bold">Pesan dan Kesan</label>
+              <textarea class="w-full h-40 bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500"></textarea> 
+            </div>
+            <div class="w-full px-4">
+              <button class="text-base font-semibold text-white bg-indigo-600 py-4 px-10 rounded-full w-full hover:opacity-80 hover:shadow-lg transition duration-500">Submit</button>
+            </div>
+          </div>
+          </form>
+        </div>
      </section>
 
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
