ganti konten lorem

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                 <a href="#home" class="text-base text-slate-900 py-2 mx-8 flex  group-hover:text-indigo-500">Beranda</a>
               </li>
               <li class="group">
-                <a href="#home" class="text-base text-slate-900 py-2 mx-8 flex  group-hover:text-indigo-500">About</a>
+                <a href="#about" class="text-base text-slate-900 py-2 mx-8 flex  group-hover:text-indigo-500">About</a>
               </li>
               <li class="group">
-                <a href="#home" class="text-base text-slate-900 py-2 mx-8 flex group-hover:text-indigo-500">Projects</a>
+                <a href="#project" class="text-base text-slate-900 py-2 mx-8 flex group-hover:text-indigo-500">Projects</a>
               </li>
               <li class="group">
-                <a href="#home" class="text-base text-slate-900 py-2 mx-8 flex group-hover:text-indigo-500">Contact</a>
+                <a href="#contact" class="text-base text-slate-900 py-2 mx-8 flex group-hover:text-indigo-500">Contact</a>
               </li>
             </ul>
           </nav>
@@ -104,7 +104,7 @@
       <div class="w-full self-center px-4">
           <h1 class="text-xl font-semibold text-indigo-500">Hai Dunia, Saya <span class="text-slate-900 block font-semibold text-5xl mt-1">Raditya Rizki</span></h1>
           <h2 class="font-medium text-slate-500 text-lg mb-5">Mahasiswa | It Implementor | Junior Web Programming</h2>
-          <p class="font-medium text-indigo-400 mb-10 leading-relaxed w-1/2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur impedit praesentium adipisci, quas placeat eius molestias.</p>
+          <p class="font-medium text-indigo-400 mb-10 leading-relaxed w-1/2">Seseorang yang memiliki minat berkembang di D  unia IT, mari kita bersama-sama belajar dan sharing biar dapet pengalaman baru!</p>
 
           <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">Kontak Saya Disini!</a>
     </div>
@@ -115,11 +115,11 @@
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="mb-2 font-bold text-3xl">Tentang Saya</h4>
-            <p class="font-medium text-indigo-500">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus laboriosam a sint maiores vel temporibus aliquam!</p>
+            <p class="font-medium text-indigo-500">Hai! Saya Raditya Rizki saya merupakan orang yang baru terjun di dunia IT sebagai IT Implementor dan Web Programming, status saya sebagai Mahasiswa ULBI Prodi D4 Teknik Informatika</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="font-bold text-3xl mb-2 lg:text-3xl">Ikuti Saya Disini!</h3>
-            <p class="font-medium text-base text-indigo-500 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quasi, et perspiciatis sit harum dolorum consectetur eveniet soluta.</p>
+            <p class="font-medium text-base text-indigo-500 mb-4">Saya memiliki beberapa akun platform Sosial Media dibawah ini, Mari kita berteman </p>
             <div class="flex items-center">
               <!-- Logo GitHub -->
                <a href="https://github.com/rdityaa" target="_blank" class="w-10 h-10 mr-3 rounded-full flex justify-center items-center border border-indigo-600 text-indigo-300">
@@ -147,7 +147,7 @@
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2">Project Terbaru</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas minima totam dolorem expedita aut nesciunt vitae in similique delectus eveniet!</p>
+            <p class="text-indigo-600">Apakah kamu pernah membuat project? Inilah project terakhir saya yang sudah saya buat</p>
           </div>
         </div>
 
@@ -159,7 +159,7 @@
         <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
           Duck vs Obstacles Games
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan GitHub <a class="font-semibold text-slate-900" href="#" target="_blank">Cek Disini!</a>
+        <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan GitHub <a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/ducks-vs-obstacles_Greenfoot-Game" target="_blank">Cek Disini!</a>
       </div>
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
@@ -168,51 +168,51 @@
         <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
           UI/UX Aplikasi I Health
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat rancangan design dan protoype aplikasi I Health dari FIgma dan membuat design thinking dari ranangan UI/UX ini <a class="font-semibold text-slate-900" href="#" target="_blank">Cobain Prototype!</a></p>
+        <p class="font-medium text-base text-indigo-500">Membuat rancangan design dan protoype aplikasi I Health dari FIgma dan membuat design thinking dari ranangan UI/UX ini <a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://www.figma.com/proto/BgBpbUnStsXwnTrAU5b7kb/Aplikasi-layanan-kesehatan?t=fPvRep2BY9i8qqi9-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&node-id=1-2&starting-point-node-id=1%3A2" target="_blank">Cobain Protoype</a></p>
       </div>
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
-          <img src="img/image.png" alt="" class="w-full">
+          <img src="img/laravel.jpeg" alt="" class="w-full">
         </div>
         <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
           E-Commerce Website
         </h3>
-        <p class="font-medium text-base text-indigo-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti modi aliquam dolore, officia dolor natus ea minima quo. Adipisci, illo.</p>
+        <p class="font-medium text-base text-indigo-500">Membuat aplikasi PHP dengan Framework Laravel, AlpineJS, TailwindCSS bertema E-Commerce sederhana tentang toko komputer<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/Tugas-Besar-E-commerce-CRUD" target="_blank">Cek Disini!</a></p>
       </div>
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="img/image.png" alt="" class="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
-          Greenfoot Java Games
+        <h3 class="font-semibold text-xl text-slate-900 mt-8 mb-3">
+          Profile Web Design
         </h3>
-        <p class="font-medium text-base text-indigo-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum laboriosam, voluptates molestias nobis mollitia nostrum rerum.</p>
+        <p class="font-medium text-base text-indigo-500">Membuat Website profile yang berisi tentang pribadi dengan HTML, CSS dan Framework CSS Boostrap 5<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/rditya.github.io" target="_blank">Cek Disini!</a></p>
       </div>
       </div>
      </section>
 
      <!-- Contact -->
-     <section id="project" class="pt-36 mt-16 pb-16 w-screen">
+     <section id="contact" class="pt-36 mt-16 pb-16 w-screen">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2">Kontak Saya</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas minima totam dolorem expedita aut nesciunt vitae in similique delectus eveniet!</p>
+            <p class="text-indigo-600">Jika kamu ingin berinteraksi dengan saya, Contact saya dengan form dibawah ini</p>
           </div>
 
           <form action="#">
             <div class="w-full lg:w-2/3 lg:mx-auto">
               <div class="w-full px-4 mb-8">
                 <label for="name" class="text-base font-bold">Nama</label>
-                <input type="text" id="name" class="w-full bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500">
+                <input type="text" placeholder="Dit Doang" id="name" class="w-full bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500">
               </div>
             <div class="w-full px-4 mb-8">
               <label for="email" class="text-base font-bold">Email</label>
-              <input type="email" id="email" class="w-full bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500">
+              <input type="email" placeholder="ditdoang@mail.com" id="email" class="w-full bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500">
             </div>
             <div class="w-full px-4 mb-8">
               <label for="message" class="text-base font-bold">Pesan dan Kesan</label>
-              <textarea class="w-full h-40 bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500"></textarea> 
+              <textarea placeholder="Ketik pesan dan saranmu disini" class="w-full h-40 bg-gray-100 border text-slate-900 rounded-md p-3 focus:outline-none focus:ring-indigo-500 focus:ring-1 focus:border-indigo-500"></textarea> 
             </div>
             <div class="w-full px-4">
               <button class="text-base font-semibold text-white bg-indigo-600 py-4 px-10 rounded-full w-full hover:opacity-80 hover:shadow-lg transition duration-500">Submit</button>
@@ -222,6 +222,7 @@
         </div>
      </section>
 
+     <!-- Tracker Do.my.id -->
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
 
      <script src="script.js"></script>
