lengkapi section project

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
      <!-- Tracker Do.my.id -->
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
 
+     <!-- Link JS -->
      <script src="script.js"></script>
 </body>
 </html>
