add google search console

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="h908g9Xlz7JZFzHk6Xp4oZUF-Iqhp5tPQXpsk2XEWtA" />
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Link CSS -->
@@ -66,7 +68,7 @@
     <div class="container">
       <div class="flex items-center justify-between relative">
         <div class="px-4">
-          <a href="#home" class="block text-indigo-500 text-2xl py-6 font-bold">ditdoang</a>
+          <a href="#home" class="block text-indigo-500 text-2xl py-6 font-bold">Dit Doang!</a>
         </div>
         <div class="flex items-center px-4">
           <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
@@ -104,9 +106,9 @@
       <div class="w-full self-center px-4">
           <h1 class="text-xl font-semibold text-indigo-500">Hai Dunia, Saya <span class="text-slate-900 block font-semibold text-5xl mt-1">Raditya Rizki</span></h1>
           <h2 class="font-medium text-slate-500 text-lg mb-5">Mahasiswa | It Implementor | Junior Web Programming</h2>
-          <p class="font-medium text-indigo-400 mb-10 leading-relaxed w-1/2">Seseorang yang memiliki minat berkembang di D  unia IT, mari kita bersama-sama belajar dan sharing biar dapet pengalaman baru!</p>
-
-          <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">Kontak Saya Disini!</a>
+          <p class="font-medium text-indigo-400 mb-10 leading-relaxed md:w-1/2">Seseorang yang memiliki minat berkembang di Dunia IT, mari kita bersama-sama belajar dan sharing biar dapet pengalaman baru!</p>
+          <a class="text-base font-semibold mr-2 text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">Kontak Saya</a>
+          <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">Lihat cv Saya</a>
     </div>
   
     <!-- About Section -->
