add cv button, skill layout

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
           <h1 class="text-xl font-semibold text-indigo-500">Hai Dunia, Saya <span class="text-slate-900 block font-semibold text-5xl mt-1">Raditya Rizki</span></h1>
           <h2 class="font-medium text-slate-500 text-lg mb-5">Mahasiswa | It Implementor | Junior Web Programming</h2>
           <p class="font-medium text-indigo-400 mb-10 leading-relaxed md:w-1/2">Seseorang yang memiliki minat berkembang di Dunia IT, mari kita bersama-sama belajar dan sharing biar dapet pengalaman baru!</p>
-          <a class="text-base font-semibold mr-2 text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">Kontak Saya</a>
-          <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="#">Lihat cv Saya</a>
+          <a class="text-base font-semibold text-white bg-indigo-600 py-3 px-8 rounded-full hover:shadow-lg hover:bg-indigo-800 hover:opacity-80 transition duration-300 ease-in-out" href="https://drive.google.com/file/d/1nRiV1oQEp-QKF4ymBJFxlzevyDCtdr5y/view">Download CV!</a>
     </div>
   
     <!-- About Section -->
@@ -224,7 +223,7 @@
                   type="text" 
                   id="name" 
                   name="name"
-                  placeholder="Contoh: John Doe" 
+                  placeholder="Dit Doang!" 
                   class="w-full bg-gray-50 border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder:text-slate-400"
@@ -241,7 +240,7 @@
                   type="email" 
                   id="email" 
                   name="email"
-                  placeholder="contoh@email.com" 
+                  placeholder="dit@email.com" 
                   class="w-full bg-gray-50 border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder:text-slate-400"
