add project layout

--- a/index.html
+++ b/index.html
@@ -201,7 +201,48 @@
             <p class="text-indigo-600">Berikut adalah Keterampilan Tools dan Bahasa Pemrogamman saya</p>
           </div>
         </div>
+        <!-- Daftar Skill -->
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+      <!-- HTML -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">HTML</span>
+      </div>
 
+      <!-- CSS -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">CSS</span>
+      </div>
+
+      <!-- JavaScript -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">JavaScript</span>
+      </div>
+
+      <!-- PHP -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">PHP</span>
+      </div>
+
+      <!-- Tailwind CSS -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">Tailwind CSS</span>
+      </div>
+
+      <!-- Bootstrap -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">Bootstrap</span>
+      </div>
+
+      <!-- Laravel -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">Laravel</span>
+      </div>
+
+      <!-- CodeIgniter -->
+      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
+        <span class="text-gray-700 font-medium">CodeIgniter</span>
+      </div>
+    </div>
      </section>
 
      <!-- Contact -->
