atambah responsive di tablet

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </div>
         </div>
         <!-- Daftar Skill -->
-    <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+    <div class="grid grid-cols-1 lg:grid-cols-4 gap-4 md:grid-cols-2">
       <!-- HTML -->
       <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
         <span class="text-gray-700 font-medium">HTML</span>
