edit form, add footer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+  <!-- Link Font Awsome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
   <!-- Custom Tailwindcss -->
   <script>
@@ -198,7 +201,7 @@
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2">Keterampilan</h4>
-            <p class="text-indigo-600">Berikut adalah Keterampilan Tools dan Bahasa Pemrogamman saya</p>
+            <p class="text-indigo-600">Berikut adalah Keterampilan Tools, Framework dan Bahasa Pemrogamman saya</p>
           </div>
         </div>
         <!-- Daftar Skill -->
@@ -246,12 +249,12 @@
      </section>
 
      <!-- Contact -->
-     <section id="contact" class="pt-36 mt-16 pb-16 w-screen">
+     <section id="contact" class="pt-36 mt-16 pb-16 w-screen bg-slate-800 text-white rounded-t-xl shadow-2xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2">Kontak Saya</h4>
-            <p class="text-indigo-600">Jika kamu ingin berinteraksi dengan saya, Contact saya dengan form dibawah ini</p>
+            <p class="text-slate-400">Jika kamu ingin berinteraksi dengan saya, Contact saya dengan form dibawah ini</p>
           </div>
           <form id="contactForm" class="w-full">
             <div class="w-full lg:w-2/3 lg:mx-auto">
@@ -265,7 +268,7 @@
                   id="name" 
                   name="name"
                   placeholder="Dit Doang!" 
-                  class="w-full bg-gray-50 border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full bg-slate-600 border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder:text-slate-400"
                   required
@@ -282,7 +285,7 @@
                   id="email" 
                   name="email"
                   placeholder="dit@email.com" 
-                  class="w-full bg-gray-50 border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full bg-slate-600 border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder:text-slate-400"
                   required
@@ -298,7 +301,7 @@
                   id="message" 
                   name="message"
                   placeholder="Tulis pesan Anda disini..." 
-                  class="w-full h-40 bg-gray-50 border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full h-40 bg-slate-600 border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder:text-slate-400 resize-none"
                   required
@@ -320,6 +323,9 @@
           </form>
         </div>
      </section>
+
+     <!-- Footer -->
+     <footer class="text-white bg-slate-800 w-full text-xl text-center py-4">2024 Created by Dit Doang!</footer>
 
      <!-- Tracker Do.my.id -->
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
