--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
      </section>
 
      <!-- Keterampilan -->
-     <section id="project" class="pt-36 mt-16 pb-16 w-screen rounded-xl shadow-xl">
+     <section id="project" class="pt-36 mt-56 pb-16 h-[600px] w-screen rounded-xl shadow-xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
@@ -249,7 +249,7 @@
      </section>
 
      <!-- Contact -->
-     <section id="contact" class="pt-36 mt-16 pb-16 w-screen bg-slate-800 text-white rounded-t-xl shadow-2xl">
+     <section id="contact" class="pt-36 mt-56 pb-16 w-screen bg-slate-800 text-white rounded-t-xl shadow-2xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
