tambah link playstore, repo github

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
           Duck vs Obstacles Games
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan GitHub <a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/ducks-vs-obstacles_Greenfoot-Game" target="_blank">Cek Disini!</a>
+        <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan <a class="text-black font-semibold" href="https://github.com/rdityaa/ducks-vs-obstacles_Greenfoot-Game" target="_blank">GitHub source code</a></span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://play.google.com/store/apps/details?id=com.kxland.ductjoy&pcampaignid=web_share" target="_blank">Download di Playstore!</a>
       </div>
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
@@ -181,7 +181,7 @@
         <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
           E-Commerce Website
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat aplikasi PHP dengan Framework Laravel, AlpineJS, TailwindCSS bertema E-Commerce sederhana tentang toko komputer<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/Tugas-Besar-E-commerce-CRUD" target="_blank">Cek Disini!</a></p>
+        <p class="font-medium text-base text-indigo-500">Membuat aplikasi PHP dengan Framework Laravel, AlpineJS, TailwindCSS bertema E-Commerce sederhana tentang toko komputer<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/Tugas-Besar-E-commerce-CRUD" target="_blank">Source Code</a></p>
       </div>
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
@@ -190,7 +190,7 @@
         <h3 class="font-semibold text-xl text-slate-900 mt-8 mb-3">
           Profile Web Design
         </h3>
-        <p class="font-medium text-base text-indigo-500">Membuat Website profile yang berisi tentang pribadi dengan HTML, CSS dan Framework CSS Boostrap 5<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/rditya.github.io" target="_blank">Cek Disini!</a></p>
+        <p class="font-medium text-base text-indigo-500">Membuat Website profile yang berisi tentang pribadi dengan HTML, CSS dan Framework CSS Boostrap 5<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/rditya.github.io" target="_blank">Source Code</a></p>
       </div>
       </div>
      </section>
