add responsive mobile section keterampilan

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
      </section>
 
      <!-- Keterampilan -->
-     <section id="project" class="pt-36 mt-56 pb-16 h-[600px] w-screen rounded-xl shadow-xl">
+     <section id="project" class="pt-36 mt-56 pb-36 w-screen rounded-xl shadow-xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
