--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="w-full lg:w-2/3 lg:mx-auto">
               <!-- Input Nama -->
               <div class="w-full px-4 mb-8">
-                <label for="name" class="block text-base font-semibold text-slate-700 mb-2">
+                <label for="name" class="block text-base font-semibold text-white mb-2">
                   Nama
                 </label>
                 <input 
@@ -277,7 +277,7 @@
           
               <!-- Input Email -->
               <div class="w-full px-4 mb-8">
-                <label for="email" class="block text-base font-semibold text-slate-700 mb-2">
+                <label for="email" class="block text-base font-semibold text-white mb-2">
                   Email
                 </label>
                 <input 
@@ -294,7 +294,7 @@
           
               <!-- Input Pesan -->
               <div class="w-full px-4 mb-8">
-                <label for="message" class="block text-base font-semibold text-slate-700 mb-2">
+                <label for="message" class="block text-base font-semibold text-white mb-2">
                   Pesan dan Kesan
                 </label>
                 <textarea 
