add copyright link

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
      </section>
 
      <!-- Footer -->
-     <footer class="text-white bg-slate-800 w-full text-xl text-center py-4">2024 Created by Dit Doang!</footer>
+     <footer class="text-white bg-slate-800 w-full text-xl text-center py-4">2025 Created by <a class="font-semibold text-indigo-600" href="https://instagram.com/rise.dit" target="_blank">Dit Doang!</a></footer>
 
      <!-- Tracker Do.my.id -->
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
