--- a/index.html
+++ b/index.html
@@ -207,13 +207,15 @@
         <!-- Daftar Skill -->
     <div class="grid grid-cols-1 lg:grid-cols-4 gap-4 md:grid-cols-2">
       <!-- HTML -->
-      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
-        <span class="text-gray-700 font-medium">HTML</span>
+      <div class="h-20 w-full p-4 bg-white border rounded-lg shadow-sm flex items-center hover:shadow-md transition-shadow">
+        <svg role="img" width="56px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>HTML5</title><path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z"/></svg>
+        <h1 class="text-2xl font-semibold">HTML 5</h1>
       </div>
 
       <!-- CSS -->
-      <div class="h-10 w-full bg-white border rounded-lg shadow-sm flex items-center justify-center hover:shadow-md transition-shadow">
-        <span class="text-gray-700 font-medium">CSS</span>
+      <div class="h-20 w-full p-4 bg-white border rounded-lg shadow-sm flex items-center hover:shadow-md transition-shadow">
+        <svg role="img" width="56px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>CSS3</title><path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z"/></svg>
+        <h1 class="text-2xl font-semibold">CSS</h1>
       </div>
 
       <!-- JavaScript -->
