add toggle layout for dark mode

--- a/index.html
+++ b/index.html
@@ -94,9 +94,20 @@
               <li class="group">
                 <a href="#contact" class="text-base text-slate-900 py-2 mx-8 flex group-hover:text-indigo-500">Contact</a>
               </li>
+              <li>
+                <div class="flex">
+                  <span class="mr-2 text-sm text-indigo-500">Light</span>
+                  <input type="checkbox" class="hidden" id="dark-toggle">
+                  <label for="dark-toggle">
+                    <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-indigo-500 p-1">
+                      <div class="toggle-circle h-4 w-4"></div>
+                    </div>
+                  </label>
+                  <span class="mr-2 text-sm text-indigo-500">Light</span>
+                </div>
+              </li>
             </ul>
           </nav>
-
         </div>
       </div>
     </div>
