--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
       @apply -rotate-45;
       }
 
+      #dark-toggle:checked ~ label div.toggle-circle {
+      @apply translate-x-3;
+      }
+
     }
   </style>
 </head>
@@ -94,16 +98,16 @@
               <li class="group">
                 <a href="#contact" class="text-base text-slate-900 py-2 mx-8 flex group-hover:text-indigo-500">Contact</a>
               </li>
-              <li>
+              <li class="flex items-center pl-8">
                 <div class="flex">
                   <span class="mr-2 text-sm text-indigo-500">Light</span>
                   <input type="checkbox" class="hidden" id="dark-toggle">
                   <label for="dark-toggle">
-                    <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-indigo-500 p-1">
-                      <div class="toggle-circle h-4 w-4"></div>
+                    <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
+                      <div class="toggle-circle h-4 w-4 bg-white rounded-full transition duration-300 ease-in-out"></div>
                     </div>
                   </label>
-                  <span class="mr-2 text-sm text-indigo-500">Light</span>
+                  <span class="ml-2 text-sm text-slate-500">Dark</span>
                 </div>
               </li>
             </ul>
