--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- Custom Tailwindcss -->
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         container: {
           center: true,
@@ -118,7 +119,7 @@
   </header>
 
   <!-- Hero Section -->
-   <section id="home" class="pt-56">
+   <section id="home" class="pt-56 dark:bg-slate-900">
     <div class="container">
       <div class="flex flex-wrap">
       <div class="w-full self-center px-4">
