--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="flex items-center justify-between relative">
         <div class="px-4">
-          <a href="#home" class="block text-indigo-500 text-2xl py-6 font-bold">Dit Doang!</a>
+          <a href="#home" class="block text-indigo-500 text-2xl py-6 font-bold dark:text-white">Dit Doang!</a>
         </div>
         <div class="flex items-center px-4">
           <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
@@ -162,12 +162,12 @@
      </section>
 
      <!-- Project -->
-     <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-slate-100 rounded-xl shadow-xl">
+     <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-slate-100 dark:bg-slate-800 rounded-xl shadow-xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
-            <h4 class="text-4xl font-semibold mb-2">Project Terbaru</h4>
-            <p class="text-indigo-600">Apakah kamu pernah membuat project? Inilah project terakhir saya yang sudah saya buat</p>
+            <h4 class="text-4xl font-semibold mb-2 dark:text-white">Project Terbaru</h4>
+            <p class="text-indigo-600 dark:text-indigo-500">Apakah kamu pernah membuat project? Inilah project terakhir saya yang sudah saya buat</p>
           </div>
         </div>
 
@@ -176,7 +176,7 @@
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="img/game.png" alt="" class="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+        <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-5 mb-3">
           Duck vs Obstacles Games
         </h3>
         <p class="font-medium text-base text-indigo-500">Membuat menggunakan Bahasa pemrogamman Java dan menggunakan framework Greenfoot. Tersedia di Playstore dan <a class="text-black font-semibold" href="https://github.com/rdityaa/ducks-vs-obstacles_Greenfoot-Game" target="_blank">GitHub source code</a></span><a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://play.google.com/store/apps/details?id=com.kxland.ductjoy&pcampaignid=web_share" target="_blank">Download di Playstore!</a>
@@ -185,7 +185,7 @@
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="img/figma.png" alt="" class="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+        <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-5 mb-3">
           UI/UX Aplikasi I Health
         </h3>
         <p class="font-medium text-base text-indigo-500">Membuat rancangan design dan protoype aplikasi I Health dari FIgma dan membuat design thinking dari ranangan UI/UX ini <a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://www.figma.com/proto/BgBpbUnStsXwnTrAU5b7kb/Aplikasi-layanan-kesehatan?t=fPvRep2BY9i8qqi9-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&node-id=1-2&starting-point-node-id=1%3A2" target="_blank">Cobain Protoype</a></p>
@@ -194,7 +194,7 @@
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="img/laravel.jpeg" alt="" class="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-slate-900 mt-5 mb-3">
+        <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-5 mb-3">
           E-Commerce Website
         </h3>
         <p class="font-medium text-base text-indigo-500">Membuat aplikasi PHP dengan Framework Laravel, AlpineJS, TailwindCSS bertema E-Commerce sederhana tentang toko komputer<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/Tugas-Besar-E-commerce-CRUD" target="_blank">Source Code</a></p>
@@ -203,7 +203,7 @@
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="img/image.png" alt="" class="w-full">
         </div>
-        <h3 class="font-semibold text-xl text-slate-900 mt-8 mb-3">
+        <h3 class="font-semibold text-xl text-slate-900 dark:text-white mt-8 mb-3">
           Profile Web Design
         </h3>
         <p class="font-medium text-base text-indigo-500">Membuat Website profile yang berisi tentang pribadi dengan HTML, CSS dan Framework CSS Boostrap 5<a class="font-semibold block px-4 py-2 mt-6 rounded-full bg bg-indigo-600 text-white w-full mx-auto text-center" href="https://github.com/rdityaa/rditya.github.io" target="_blank">Source Code</a></p>
