--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="scroll-smooth">
 <head>
-  <title>Dit Portofolio</title>
+  <title>Ditdoang Portofolio</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Search Console -->
