--- a/index.html
+++ b/index.html
@@ -274,18 +274,18 @@
      </section>
 
      <!-- Contact -->
-     <section id="contact" class="pt-36 mt-56 pb-16 w-screen bg-slate-800 text-white rounded-t-xl shadow-2xl">
+     <section id="contact" class="pt-36 mt-56 pb-16 w-screen bg-gray-50 rounded-t-xl shadow-2xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="text-4xl font-semibold mb-2">Kontak Saya</h4>
-            <p class="text-slate-400">Jika kamu ingin berinteraksi dengan saya, Contact saya dengan form dibawah ini</p>
+            <p class="">Jika kamu ingin berinteraksi dengan saya, Contact saya dengan form dibawah ini</p>
           </div>
           <form id="contactForm" class="w-full">
             <div class="w-full lg:w-2/3 lg:mx-auto">
               <!-- Input Nama -->
               <div class="w-full px-4 mb-8">
-                <label for="name" class="block text-base font-semibold text-white mb-2">
+                <label for="name" class="block text-base font-semibold mb-2">
                   Nama
                 </label>
                 <input 
@@ -293,16 +293,16 @@
                   id="name" 
                   name="name"
                   placeholder="Dit Doang!" 
-                  class="w-full bg-slate-600 border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
-                         transition-all duration-200 placeholder:text-slate-400"
+                         transition-all duration-200 placeholder:"
                   required
                 >
               </div>
           
               <!-- Input Email -->
               <div class="w-full px-4 mb-8">
-                <label for="email" class="block text-base font-semibold text-white mb-2">
+                <label for="email" class="block text-base font-semibold mb-2">
                   Email
                 </label>
                 <input 
@@ -310,25 +310,25 @@
                   id="email" 
                   name="email"
                   placeholder="dit@email.com" 
-                  class="w-full bg-slate-600 border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
-                         transition-all duration-200 placeholder:text-slate-400"
+                         transition-all duration-200 placeholder:"
                   required
                 >
               </div>
           
               <!-- Input Pesan -->
               <div class="w-full px-4 mb-8">
-                <label for="message" class="block text-base font-semibold text-white mb-2">
+                <label for="message" class="block text-base font-semibold mb-2">
                   Pesan dan Kesan
                 </label>
                 <textarea 
                   id="message" 
                   name="message"
                   placeholder="Tulis pesan Anda disini..." 
-                  class="w-full h-40 bg-slate-600 border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full h-40 border border-gray-300 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
-                         transition-all duration-200 placeholder:text-slate-400 resize-none"
+                         transition-all duration-200 placeholder: resize-none"
                   required
                 ></textarea>
               </div>
@@ -337,7 +337,7 @@
               <div class="w-full px-4">
                 <button 
                   type="submit" 
-                  class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-4 px-8 
+                  class="w-full bg-indigo-600 text-white hover:bg-indigo-700 font-semibold py-4 px-8 
                          rounded-full transition-all duration-300 transform hover:scale-[1.02] 
                          active:scale-95 shadow-md hover:shadow-lg"
                 >
@@ -350,7 +350,7 @@
      </section>
 
      <!-- Footer -->
-     <footer class="text-white bg-slate-800 w-full text-xl text-center py-4">2025 Created by <a class="font-semibold text-indigo-600" href="https://instagram.com/rise.dit" target="_blank">Dit Doang!</a></footer>
+     <footer class="bg-indigo-600 rounded-t-2xl w-full text-xl text-center py-4 text-white">2025 Created by <a class="font-semibold" href="https://instagram.com/rise.dit" target="_blank">Dit Doang!</a></footer>
 
      <!-- Tracker Do.my.id -->
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
