resize padding, margin

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
      </section>
 
      <!-- Contact -->
-     <section id="contact" class="pt-36 mt-56 pb-16 w-screen bg-gray-50 rounded-t-xl shadow-2xl">
+     <section id="contact" class="pt-36 mt-56 pb-32 w-screen bg-slate-100 rounded-t-xl shadow-2xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
@@ -350,7 +350,7 @@
      </section>
 
      <!-- Footer -->
-     <footer class="bg-indigo-600 rounded-t-2xl w-full text-xl text-center py-4 text-white">2025 Created by <a class="font-semibold" href="https://instagram.com/rise.dit" target="_blank">Dit Doang!</a></footer>
+     <footer class="bg-indigo-600 rounded-t-2xl w-full text-xl text-center py-3 text-white">2025 Created by <a class="font-semibold" href="https://instagram.com/rise.dit" target="_blank">Dit Doang!</a></footer>
 
      <!-- Tracker Do.my.id -->
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
