add dark mode style for contact

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
      </section>
 
      <!-- Contact -->
-     <section id="contact" class="pt-36 mt-56 pb-32 w-screen bg-slate-100 rounded-t-xl shadow-2xl">
+     <section id="contact" class="pt-36 mt-56 pb-32 w-screen bg-slate-100 dark:bg-slate-800 dark:text-white rounded-t-xl shadow-2xl">
       <div class="container">
         <div class="w-full">
           <div class="mx-auto mb-16 max-w-xl text-center">
