add meta for netlify

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <title>Ditdoang Portofolio</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <!-- Google Search Console -->
   <meta name="google-site-verification" content="h908g9Xlz7JZFzHk6Xp4oZUF-Iqhp5tPQXpsk2XEWtA" />
+
+  <!-- Google Sarch Console (Netlify) -->
+  <meta name="google-site-verification" content="jFhHo6zdSTuzxPV4umSJXmfa5FPTV7qsm09epfhNZzQ" />
+
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Link CSS -->
