--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Sarch Console (Netlify) -->
-  <meta name="google-site-verification" content="jFhHo6zdSTuzxPV4umSJXmfa5FPTV7qsm09epfhNZzQ" />
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="h908g9Xlz7JZFzHk6Xp4oZUF-Iqhp5tPQXpsk2XEWtA" />
 
   <script src="https://cdn.tailwindcss.com"></script>
 
