--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
      </section>
 
      <!-- Footer -->
-     <footer class="bg-indigo-600 rounded-t-2xl w-full text-xl text-center py-3 text-white">2025 Created by <a class="font-semibold" href="https://instagram.com/rise.dit" target="_blank">Dit Doang!</a></footer>
+     <footer class="bg-indigo-600 rounded-t-2xl w-full text-base text-center py-3 text-white">2025 Created by <a class="font-semibold" href="https://instagram.com/rise.dit" target="_blank">Dit Doang!</a></footer>
 
      <!-- Tracker Do.my.id -->
      <script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
