--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                   id="name" 
                   name="name"
                   placeholder="Dit Doang!" 
-                  class="w-full border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full border border-gray-300 dark:bg-slate-600 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder:"
                   required
@@ -312,7 +312,7 @@
                   id="email" 
                   name="email"
                   placeholder="dit@email.com" 
-                  class="w-full border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full border border-gray-300 dark:bg-slate-600 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder:"
                   required
@@ -328,7 +328,7 @@
                   id="message" 
                   name="message"
                   placeholder="Tulis pesan Anda disini..." 
-                  class="w-full h-40 border border-gray-300 text-slate-900 rounded-lg p-3.5
+                  class="w-full h-40 border border-gray-300 dark:bg-slate-600 text-slate-900 rounded-lg p-3.5
                          focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500
                          transition-all duration-200 placeholder: resize-none"
                   required
