add community section

--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
             <p class="text-indigo-600 dark:text-indigo-500">Apakah kamu pernah membuat project? Inilah project terakhir saya yang sudah saya buat</p>
           </div>
         </div>
-
-    <div class="w-full flex flex-wrap justify-center">
+        <div class="w-full flex flex-wrap justify-center">
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
           <img src="img/game.png" alt="" class="w-full">
@@ -273,6 +272,17 @@
         <h1 class="font-medium ml-2 text-indigo-500 dark:text-white">CodeIgniter</h1>
       </div>
     </div>
+     </section>
+
+     <!-- Kegabutan -->
+     <section id="project" class="pt-36 mt-16 pb-16 w-screen bg-slate-100 dark:bg-slate-800 rounded-xl shadow-xl">
+      <div class="container">
+        <div class="w-full">
+          <div class="mx-auto mb-16 max-w-xl text-center">
+            <h4 class="text-4xl font-semibold mb-2 dark:text-white">Join Community Us!</h4>
+            <p class="text-indigo-600 dark:text-indigo-500">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste necessitatibus debitis ut. A neque ad distinctio.</p>
+          </div>
+        </div>
      </section>
 
      <!-- Contact -->
